package com.Rifacel.models.Enums;

public enum TransactionState {
    ACCEPTED,
    PENDING,
    REJECTED;
}
